INDEX.HTML - remove 'manage consent' button from bottom BANNER - remove owl dots ACCREDITATION & OUR CLIENTS - apply overflow-x: hidden to stop carousel items overflowing

--- a/css/application.css
+++ b/css/application.css
@@ -813,24 +813,6 @@ div.banner-container div.image-container div.why-choose-us div.wrapper a:hover {
     align-self: flex-start;
   }
 }
-div.banner-container div.image-container div.why-choose-us div#owl-dots {
-  display: flex;
-  justify-content: center;
-}
-div.banner-container div.image-container div.why-choose-us div#owl-dots span.owl-dot {
-  display: inline-block;
-  width: 11px;
-  height: 11px;
-  margin: 0 10px;
-  margin-top: 10px;
-  background-color: hsla(0, 0%, 100%, 0.5);
-  color: #666;
-  border-radius: 30px;
-  transition: opacity 0.2s ease;
-}
-div.banner-container div.image-container div.why-choose-us div#owl-dots span.owl-dot:hover {
-  background-color: #869791;
-}
 
 div#middle div.container div.our-services-headline {
   color: #333645;
@@ -1631,6 +1613,7 @@ div#middle div.container div#our-services-container div#bottom-services ul li:la
 }
 
 div.accreditations-container {
+  overflow-x: hidden;
   background-color: white;
   margin: 40px 0 20px;
   width: 100%;
@@ -2001,6 +1984,7 @@ div.container div#latest-news-main-container div#latest-news div.latest-news-ite
 }
 
 div.our-clients-carousel {
+  overflow-x: hidden;
   display: flex;
   gap: 90px;
 }
