--- a/scss/main-sections/_accreditations.scss
+++ b/scss/main-sections/_accreditations.scss
@@ -1,4 +1,5 @@
 div.accreditations-container{
+    overflow-x: hidden;
     background-color: white;
     margin: 40px 0 20px;
     width: 100%;
