--- a/scss/main-sections/_our-clients.scss
+++ b/scss/main-sections/_our-clients.scss
@@ -1,4 +1,5 @@
 div.our-clients-carousel{
+    overflow-x: hidden;
     display: flex;
     gap: 90px;
     div.carousel-item{
